# tdapi

./: .gitignore  deploy.py  pyproject.toml
tdapi/: __init__.py  client.py  config.py  utils.py
tdapi/constants/: __init__.py  options.py
tdapi/models/: __init__.py  auth.py  options.py
tests/: test_tdapi.py
